--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,17 @@
 .App {
   display: flex;
+  height: 100vh;
+  
+}
+.appp {
+  display: flex;
+  width: calc(100vw - 250px);
 }
 .App .container{
+  flex-grow: 1;
+  padding: 0 60px;
+}
+.appp .container{
   flex-grow: 1;
   padding: 0 60px;
 }
