--- a/src/components/userslist.css
+++ b/src/components/userslist.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
     background: #fbfbfb;
     color: var(--heading-color);
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100vh;
   }
   .user-list h2 {
     text-align: right;
