--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,18 @@ ul {
   font-size: 1em;
   border: 1px solid var(--primary-color);
 }
+.form-error {
+  color: #fff;
+  padding: 8px 0px;
+  text-align: center;
+  width: 100%;
+  border-radius: 4px;
+  background-color: var(--primary-color);
+  cursor: pointer;
+  font-size: 1em;
+  display: flex;
+  justify-content: center;
+}
 .btn:hover {
   color: #fff;
   background-color: var(--primary-color);
