--- a/src/components/userslist.css
+++ b/src/components/userslist.css
@@ -22,6 +22,7 @@
     justify-content: flex-end;
     align-items: center;
     margin: 20px auto;
+    text-transform: capitalize;
   }
   .user-list .avatar {
     margin-left: 10px;
